# Sandbox

./: README.md
exampleCMake/: CMakeLists.txt  README.md
exampleCMake/inc/: file_ops.hpp
exampleCMake/src/: file_ops.cpp  main.cpp
exampleCMakeAndLib/: CMakeLists.txt  README.md
exampleCMakeAndLib/app/: CMakeLists.txt
exampleCMakeAndLib/app/src/: main.cpp
exampleCMakeAndLib/lib/: CMakeLists.txt  my_lib.hpp
exampleCMakeAndLib/lib/src/: my_lib.cpp
exampleCMakeAndLib/src/: CMakeLists.txt
